[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/hud/HUD_panel style.tres" type="StyleBox" id=1]
[ext_resource path="res://hud/minimap_container.gd" type="Script" id=2]
[ext_resource path="res://hud/HUD.gd" type="Script" id=3]
[ext_resource path="res://assets/Planet-shadow_only.png" type="Texture" id=4]
[ext_resource path="res://hud/orrery_container.gd" type="Script" id=5]
[ext_resource path="res://assets/ships/playerShip2_blue.png" type="Texture" id=6]
[ext_resource path="res://assets/ships/enemyRed5.png" type="Texture" id=7]
[ext_resource path="res://assets/bottom_bar_style.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/bodies/Planet1.png" type="Texture" id=9]
[ext_resource path="res://assets/hud/arrow.png" type="Texture" id=10]
[ext_resource path="res://hud/orrery_panel.gd" type="Script" id=11]
[ext_resource path="res://assets/HUD ship outline.tres" type="Material" id=12]
[ext_resource path="res://assets/hud/grey_panel.png" type="Texture" id=13]
[ext_resource path="res://hud/HUD_right.gd" type="Script" id=14]
[ext_resource path="res://assets/ships/playerShip3_blue.png" type="Texture" id=15]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 100, 100 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Control" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="."]
margin_left = 825.0
margin_right = 865.0
margin_bottom = 40.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_rightHUD" type="Panel" parent="Control2"]
margin_right = 202.0
margin_bottom = 598.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panelbuttons" type="Panel" parent="Control2/Panel_rightHUD"]
margin_right = 198.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/Panel_rightHUD"]
margin_right = 164.0
margin_bottom = 20.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCensus" type="Button" parent="Control2/Panel_rightHUD/HBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
text = "Census"

[node name="ButtonPlanet" type="Button" parent="Control2/Panel_rightHUD/HBoxContainer"]
margin_left = 62.0
margin_right = 121.0
margin_bottom = 20.0
text = "Planets"

[node name="ButtonShip" type="Button" parent="Control2/Panel_rightHUD/HBoxContainer"]
margin_left = 125.0
margin_right = 164.0
margin_bottom = 20.0
text = "Ship"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control2/Panel_rightHUD"]
margin_top = 20.0
margin_right = 164.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRefit" type="Button" parent="Control2/Panel_rightHUD/HBoxContainer2"]
margin_right = 41.0
margin_bottom = 20.0
text = "Refit"

[node name="ButtonCargo" type="Button" parent="Control2/Panel_rightHUD/HBoxContainer2"]
margin_left = 45.0
margin_right = 92.0
margin_bottom = 20.0
text = "Cargo"

[node name="PanelInfo" type="Panel" parent="Control2/Panel_rightHUD"]
margin_left = 4.0
margin_top = 40.0
margin_right = 197.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetInfo" type="Control" parent="Control2/Panel_rightHUD/PanelInfo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="LabelName" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/PlanetInfo"]
margin_right = 44.0
margin_bottom = 14.0
text = "Planet:"

[node name="RichTextLabel" type="RichTextLabel" parent="Control2/Panel_rightHUD/PanelInfo/PlanetInfo"]
margin_top = 20.0
margin_right = 192.0
margin_bottom = 184.0
bbcode_text = "Planet:

Pressure:
Gravity:
Temperature:
Hydro:
"
text = "Planet:

Pressure:
Gravity:
Temperature:
Hydro:
"

[node name="TextureRect" type="TextureRect" parent="Control2/Panel_rightHUD/PanelInfo/PlanetInfo"]
margin_left = 83.0
margin_top = 1.0
margin_right = 803.0
margin_bottom = 721.0
rect_scale = Vector2( 0.15, 0.15 )
mouse_filter = 2
texture = ExtResource( 9 )

[node name="TextureRect2" type="TextureRect" parent="Control2/Panel_rightHUD/PanelInfo/PlanetInfo"]
margin_left = 83.0
margin_top = 1.0
margin_right = 803.0
margin_bottom = 721.0
rect_scale = Vector2( 0.15, 0.15 )
mouse_filter = 2
texture = ExtResource( 4 )

[node name="PrevButton" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/PlanetInfo"]
margin_left = -5.0
margin_top = 180.0
margin_right = 15.0
margin_bottom = 200.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/PlanetInfo"]
margin_left = 15.0
margin_top = 180.0
margin_right = 57.0
margin_bottom = 200.0
text = "Back"

[node name="GoToButton" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/PlanetInfo"]
margin_left = 60.0
margin_top = 180.0
margin_right = 107.0
margin_bottom = 200.0
text = "Go to"

[node name="ConquerButton" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/PlanetInfo"]
margin_left = 110.0
margin_top = 180.0
margin_right = 175.0
margin_bottom = 200.0
text = "Conquer"

[node name="NextButton" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/PlanetInfo"]
margin_left = 175.0
margin_top = 180.0
margin_right = 195.0
margin_bottom = 200.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScanButton" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/PlanetInfo"]
visible = false
margin_left = 110.0
margin_top = 180.0
margin_right = 122.0
margin_bottom = 200.0
text = "Scan"

[node name="ShipInfo" type="Control" parent="Control2/Panel_rightHUD/PanelInfo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control2/Panel_rightHUD/PanelInfo/ShipInfo"]
visible = false
margin_right = 193.0
margin_bottom = 185.0
bbcode_text = "Scout

Power: 1
Engine: 1
Shields: 1
"
text = "Scout

Power: 1
Engine: 1
Shields: 1
"

[node name="TextureRect2" type="TextureRect" parent="Control2/Panel_rightHUD/PanelInfo/ShipInfo"]
margin_left = 80.0
margin_top = 1.0
margin_right = 192.0
margin_bottom = 76.0
texture = ExtResource( 15 )

[node name="ShipName" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/ShipInfo"]
margin_right = 40.0
margin_bottom = 14.0
text = "Scout"

[node name="Rank" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/ShipInfo"]
margin_top = 15.0
margin_right = 40.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Power" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/ShipInfo"]
margin_top = 45.0
margin_right = 55.0
margin_bottom = 59.0
text = "Power: 1"

[node name="Engine" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/ShipInfo"]
margin_top = 60.0
margin_right = 58.0
margin_bottom = 74.0
text = "Engine: 1"

[node name="Shields" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/ShipInfo"]
margin_top = 75.0
margin_right = 62.0
margin_bottom = 89.0
text = "Shields: 1"

[node name="Others" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/ShipInfo"]
margin_top = 90.0
margin_right = 62.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Task" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/ShipInfo"]
margin_top = 110.0
margin_right = 40.0
margin_bottom = 124.0
text = "Task:"

[node name="RefitInfo" type="Control" parent="Control2/Panel_rightHUD/PanelInfo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ShipName" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_right = 40.0
margin_bottom = 14.0
text = "Scout"

[node name="Label" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_top = 15.0
margin_right = 154.0
margin_bottom = 29.0
text = "Select system to upgrade"

[node name="Power" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_left = 10.0
margin_top = 30.0
margin_right = 65.0
margin_bottom = 44.0
text = "Power: 1"

[node name="Engine" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_left = 10.0
margin_top = 45.0
margin_right = 68.0
margin_bottom = 59.0
text = "Engine: 1"

[node name="Shields" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_left = 10.0
margin_top = 60.0
margin_right = 72.0
margin_bottom = 74.0
text = "Shields: 1"

[node name="Others" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_left = 10.0
margin_top = 75.0
margin_right = 72.0
margin_bottom = 89.0

[node name="Cursor" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_top = 30.0
margin_right = 40.0
margin_bottom = 44.0
text = ">"

[node name="ButtonUp" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_left = -5.0
margin_top = 180.0
margin_right = 37.0
margin_bottom = 200.0
text = "< Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUpgrade" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_left = 40.0
margin_top = 180.0
margin_right = 105.0
margin_bottom = 200.0
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSell" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_left = 105.0
margin_top = 180.0
margin_right = 140.0
margin_bottom = 200.0
text = "Sell"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDown" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/RefitInfo"]
margin_left = 140.0
margin_top = 180.0
margin_right = 200.0
margin_bottom = 200.0
text = "> Down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CargoInfo" type="Control" parent="Control2/Panel_rightHUD/PanelInfo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Heading" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/CargoInfo"]
margin_left = 10.0
margin_right = 109.0
margin_bottom = 14.0
text = "Cargo listing:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control2/Panel_rightHUD/PanelInfo/CargoInfo"]
margin_left = 10.0
margin_top = 15.0
margin_right = 192.0
margin_bottom = 181.0
bbcode_text = "Cargo"
text = "Cargo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor3" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/CargoInfo"]
margin_top = 15.0
margin_right = 40.0
margin_bottom = 29.0
text = ">"

[node name="ButtonUp3" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/CargoInfo"]
margin_top = 180.0
margin_right = 42.0
margin_bottom = 200.0
text = "< Up"

[node name="ButtonSell" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/CargoInfo"]
margin_left = 45.0
margin_top = 180.0
margin_right = 80.0
margin_bottom = 200.0
text = "Sell"

[node name="ButtonBuy" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/CargoInfo"]
margin_left = 85.0
margin_top = 180.0
margin_right = 121.0
margin_bottom = 200.0
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDown3" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/CargoInfo"]
margin_left = 125.0
margin_top = 180.0
margin_right = 185.0
margin_bottom = 200.0
text = "> Down"

[node name="NavInfo" type="Control" parent="Control2/Panel_rightHUD/PanelInfo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetList" type="ScrollContainer" parent="Control2/Panel_rightHUD/PanelInfo/NavInfo"]
margin_right = 190.0
margin_bottom = 180.0
rect_min_size = Vector2( 190, 170 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control2/Panel_rightHUD/PanelInfo/NavInfo/PlanetList"]
margin_right = 190.0
margin_bottom = 180.0
rect_min_size = Vector2( 190, 180 )

[node name="Cursor2" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/NavInfo"]
margin_right = 40.0
margin_bottom = 14.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUp2" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/NavInfo"]
margin_top = 180.0
margin_right = 42.0
margin_bottom = 200.0
text = "< Up"

[node name="ButtonView" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/NavInfo"]
margin_left = 45.0
margin_top = 180.0
margin_right = 110.0
margin_bottom = 200.0
text = "View"

[node name="ButtonDown2" type="Button" parent="Control2/Panel_rightHUD/PanelInfo/NavInfo"]
margin_left = 110.0
margin_top = 180.0
margin_right = 170.0
margin_bottom = 200.0
text = "> Down"

[node name="CensusInfo" type="Control" parent="Control2/Panel_rightHUD/PanelInfo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Headings" type="Label" parent="Control2/Panel_rightHUD/PanelInfo/CensusInfo"]
margin_right = 40.0
margin_bottom = 14.0
text = "Fleet   Planets Ships Bases"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="RichTextLabel" parent="Control2/Panel_rightHUD/PanelInfo/CensusInfo"]
margin_top = 20.0
margin_right = 186.0
margin_bottom = 34.0
custom_colors/default_color = Color( 0, 1, 1, 1 )
text = "Fleet1	1		5/5	1/1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="RichTextLabel" parent="Control2/Panel_rightHUD/PanelInfo/CensusInfo"]
margin_top = 40.0
margin_right = 186.0
margin_bottom = 54.0
custom_colors/default_color = Color( 1, 0.00784314, 0, 1 )
text = "Fleet2	0		1/1	1/1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpInfo" type="Control" parent="Control2/Panel_rightHUD/PanelInfo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control2/Panel_rightHUD/PanelInfo/HelpInfo"]
margin_right = 191.0
margin_bottom = 177.0
text = "F1 to open this help
Space - shoot
Arrows - move

A - target closest enemy
T - tractor a target
/ - release the tractored entity
R - refit
Backspace - upgrade a ship if docked
C - cloak (if you have it)
O - orbit a planet
L - land on a planet
S - scan a planet
+ and - - zoom main view in or out
M - open fullscreen map view

N - switch panel to planet listing
Shift+S - switch panel to ship info
P - switch panel to census (player listing)
Shift+C - switch panel to cargo info
G - go to a selected planet
< and > - move cursor up/down or select previous/next entry
PgUp and PgDown - move cursor up/down a page in long list"

[node name="orrery" type="Control" parent="Control2/Panel_rightHUD"]
margin_left = 20.0
margin_top = 240.0
margin_right = 180.0
margin_bottom = 400.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control2/Panel_rightHUD/orrery"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minimap" type="Control" parent="Control2/Panel_rightHUD" groups=[
"minimap",
]]
margin_left = 2.0
margin_top = 400.0
margin_right = 202.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="Control2/Panel_rightHUD/minimap"]
margin_right = 200.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" type="TextureRect" parent="Control2/Panel_rightHUD/minimap"]
margin_left = 92.0
margin_top = 91.0
margin_right = 110.0
margin_bottom = 109.0
rect_pivot_offset = Vector2( 8, 9 )
texture = ExtResource( 10 )

[node name="status_light" type="ColorRect" parent="Control2"]
modulate = Color( 0, 1, 0, 1 )
margin_left = -20.0
margin_bottom = 40.0

[node name="Control3" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Officer" type="Label" parent="Control3"]
margin_top = 20.0
margin_right = 40.0
margin_bottom = 14.0

[node name="officer_timer" type="Timer" parent="Control3"]
wait_time = 3.0

[node name="Control" type="Control" parent="."]
margin_top = 525.0
margin_right = 40.0
margin_bottom = 565.0

[node name="Panel" type="Panel" parent="Control"]
margin_right = 435.0
margin_bottom = 149.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 1 )

[node name="player_outline" type="TextureRect" parent="Control/Panel"]
material = ExtResource( 12 )
margin_left = -2.0
margin_top = 26.0
margin_right = 110.0
margin_bottom = 126.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="Label" type="Label" parent="Control/Panel"]
margin_left = 32.0
margin_top = 120.0
margin_right = 73.0
margin_bottom = 134.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.127319, 0.582031, 0, 1 )
text = "Spd: c"

[node name="Label_po" type="Label" parent="Control/Panel"]
margin_left = 112.0
margin_top = 40.0
margin_right = 152.0
margin_bottom = 54.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.12549, 0.580392, 0, 1 )
text = "Pow"

[node name="ProgressBar_po" type="ProgressBar" parent="Control/Panel"]
modulate = Color( 0.560784, 0.980392, 0.0196078, 1 )
margin_left = 157.0
margin_top = 38.0
margin_right = 264.0
margin_bottom = 54.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/fg = ExtResource( 8 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_sh" type="Label" parent="Control/Panel"]
margin_left = 112.0
margin_top = 65.0
margin_right = 152.0
margin_bottom = 79.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.12549, 0.580392, 0, 1 )
text = "Shd"

[node name="ProgressBar_sh" type="ProgressBar" parent="Control/Panel"]
modulate = Color( 0.56, 0.98, 0.02, 1 )
margin_left = 157.0
margin_top = 61.0
margin_right = 264.0
margin_bottom = 77.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/fg = ExtResource( 8 )
step = 1.0
value = 100.0
percent_visible = false

[node name="Label_en" type="Label" parent="Control/Panel"]
margin_left = 114.0
margin_top = 89.0
margin_right = 154.0
margin_bottom = 103.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.12549, 0.580392, 0, 1 )
text = "Eng"

[node name="ProgressBar_en" type="ProgressBar" parent="Control/Panel"]
modulate = Color( 0.56, 0.98, 0.02, 1 )
margin_left = 158.0
margin_top = 85.0
margin_right = 265.0
margin_bottom = 101.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/fg = ExtResource( 8 )
step = 1.0
value = 100.0
percent_visible = false

[node name="Label_kill" type="Label" parent="Control/Panel"]
margin_left = 114.0
margin_top = 120.0
margin_right = 154.0
margin_bottom = 139.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.12549, 0.580392, 0, 1 )
text = "Kills: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_points" type="Label" parent="Control/Panel"]
margin_left = 224.0
margin_top = 120.0
margin_right = 267.0
margin_bottom = 139.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.12549, 0.580392, 0, 1 )
text = "Points: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_rank" type="Label" parent="Control/Panel"]
margin_left = 18.0
margin_top = 8.0
margin_right = 61.0
margin_bottom = 27.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.12549, 0.580392, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Control"]
margin_left = 215.0
margin_right = 650.0
margin_bottom = 149.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 1 )

[node name="target_outline" type="TextureRect" parent="Control/Panel2"]
visible = false
material = ExtResource( 12 )
margin_left = 426.0
margin_top = 118.0
margin_right = 523.0
margin_bottom = 202.0
rect_rotation = 180.0
texture = ExtResource( 7 )
stretch_mode = 4

[node name="Label_po2" type="Label" parent="Control/Panel2"]
visible = false
margin_left = 115.0
margin_top = 41.0
margin_right = 155.0
margin_bottom = 55.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.12549, 0.580392, 0, 1 )
text = "Pow"

[node name="ProgressBar_po2" type="ProgressBar" parent="Control/Panel2"]
visible = false
modulate = Color( 0.560784, 0.980392, 0.0196078, 1 )
margin_left = 160.0
margin_top = 39.0
margin_right = 267.0
margin_bottom = 55.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/fg = ExtResource( 8 )
step = 1.0
value = 100.0
percent_visible = false

[node name="Label_sh2" type="Label" parent="Control/Panel2"]
visible = false
margin_left = 115.0
margin_top = 66.0
margin_right = 155.0
margin_bottom = 80.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.12549, 0.580392, 0, 1 )
text = "Shd"

[node name="ProgressBar_sh2" type="ProgressBar" parent="Control/Panel2"]
visible = false
modulate = Color( 0.56, 0.98, 0.02, 1 )
margin_left = 160.0
margin_top = 62.0
margin_right = 267.0
margin_bottom = 78.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/fg = ExtResource( 8 )
step = 1.0
value = 100.0
percent_visible = false

[node name="Label_en2" type="Label" parent="Control/Panel2"]
visible = false
margin_left = 117.0
margin_top = 90.0
margin_right = 157.0
margin_bottom = 104.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.12549, 0.580392, 0, 1 )
text = "Eng"

[node name="ProgressBar_en2" type="ProgressBar" parent="Control/Panel2"]
visible = false
modulate = Color( 0.56, 0.98, 0.02, 1 )
margin_left = 161.0
margin_top = 86.0
margin_right = 268.0
margin_bottom = 102.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/fg = ExtResource( 8 )
step = 1.0
value = 100.0
percent_visible = false

[node name="Label_arm" type="Label" parent="Control/Panel2"]
visible = false
margin_left = 115.0
margin_top = 121.0
margin_right = 159.0
margin_bottom = 135.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.12549, 0.580392, 0, 1 )
text = "Armor: 100"

[node name="Control4" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map view" type="Control" parent="Control4"]
visible = false
margin_right = 805.0
margin_bottom = 525.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control4/map view"]
margin_right = 805.0
margin_bottom = 525.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control4/map view"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
text = "SYSTEM MAP"
align = 1
valign = 1

[node name="ButtonPlus" type="Button" parent="Control4/map view"]
margin_right = 12.0
margin_bottom = 20.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMinus" type="Button" parent="Control4/map view"]
margin_left = 20.0
margin_right = 37.0
margin_bottom = 20.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_panel" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.624314 )
margin_right = 1024.0
margin_bottom = 602.0

[node name="Panel" type="Panel" parent="pause_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="pause_panel"]
margin_left = 416.0
margin_top = 249.0
margin_right = 456.0
margin_bottom = 263.0
text = "PAUSED"

[node name="Label2" type="Label" parent="pause_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -27.0
margin_right = 44.0
margin_bottom = -13.0
text = "Press Z to toggle orders mode"
[connection signal="pressed" from="Control2/Panel_rightHUD/HBoxContainer/ButtonCensus" to="." method="_on_ButtonCensus_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/HBoxContainer/ButtonPlanet" to="." method="_on_ButtonPlanet_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/HBoxContainer/ButtonShip" to="." method="_on_ButtonShip_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/HBoxContainer2/ButtonRefit" to="." method="_on_ButtonRefit_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/HBoxContainer2/ButtonCargo" to="." method="_on_ButtonCargo_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/PlanetInfo/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/RefitInfo/ButtonUp" to="." method="_on_ButtonUp_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/RefitInfo/ButtonUpgrade" to="." method="_on_ButtonUpgrade_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/RefitInfo/ButtonSell" to="Control2" method="_on_ButtonSell_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/RefitInfo/ButtonDown" to="." method="_on_ButtonDown_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/CargoInfo/ButtonUp3" to="." method="_on_ButtonUp3_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/CargoInfo/ButtonSell" to="." method="_on_ButtonSell_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/CargoInfo/ButtonBuy" to="." method="_on_ButtonBuy_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/CargoInfo/ButtonDown3" to="." method="_on_ButtonDown3_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/NavInfo/ButtonUp2" to="." method="_on_ButtonUp2_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/NavInfo/ButtonView" to="." method="_on_ButtonView_pressed"]
[connection signal="pressed" from="Control2/Panel_rightHUD/PanelInfo/NavInfo/ButtonDown2" to="." method="_on_ButtonDown2_pressed"]
[connection signal="timeout" from="Control3/officer_timer" to="." method="_on_officer_timer_timeout"]
[connection signal="pressed" from="Control4/map view/ButtonPlus" to="Control4/map view" method="_on_ButtonPlus_pressed"]
[connection signal="pressed" from="Control4/map view/ButtonMinus" to="Control4/map view" method="_on_ButtonMinus_pressed"]
